# rustcker-furukawaedition

./: .gitignore  Cargo.toml  README.md  deveropment.md  e2e_delete.ps1  e2e_images.ps1  e2e_info.ps1  e2e_inspect.ps1  e2e_list.ps1  e2e_logs.ps1  e2e_stop.ps1  e2e_version.ps1
crates/furukawa_build/: Cargo.toml
crates/furukawa_build/src/: lib.rs
crates/furukawa_common/: Cargo.toml
crates/furukawa_common/src/: lib.rs
crates/furukawa_common/src/diagnostic/: mod.rs
crates/furukawa_common/src/telemetry/: mod.rs
crates/furukawa_compose/: Cargo.toml
crates/furukawa_compose/src/: lib.rs
crates/furukawa_domain/: Cargo.toml
crates/furukawa_domain/src/: lib.rs
crates/furukawa_domain/src/container/: config.rs  mod.rs  runtime.rs  state_serde.rs  store.rs  tests.rs
crates/furukawa_domain/src/image/: digest.rs  mod.rs  ref.rs  store.rs  tests.rs
crates/furukawa_domain/src/network/: mod.rs
crates/furukawa_infra_db/: Cargo.toml
crates/furukawa_infra_db/src/sqlite/: mod.rs
crates/furukawa_infra_db/tests/: test_get.rs
crates/furukawa_infra_docker/: Cargo.toml
crates/furukawa_infra_docker/src/: lib.rs
crates/furukawa_infra_docker/src/v1_45/: image.rs  mod.rs  summary.rs  system_info.rs  version.rs
crates/furukawa_infra_fs/: Cargo.toml
crates/furukawa_infra_fs/src/: lib.rs
crates/furukawa_infra_fs/src/store/: image.rs
crates/furukawa_infra_registry/: Cargo.toml
crates/furukawa_infra_registry/src/: auth.rs  client.rs  error.rs  lib.rs  manifest.rs
crates/furukawa_infra_runtime/: Cargo.toml
crates/furukawa_infra_runtime/src/: lib.rs  process_control.rs
crates/furukawa_infra_wsl/: Cargo.toml
crates/furukawa_infra_wsl/src/: lib.rs
desktop/: package-lock.json  package.json  setup-binaries.ps1  vite.config.ts
desktop/src/: App.css  App.tsx
desktop/src-tauri/: build.rs  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/src/: lib.rs
desktop/src/api/: client.ts
desktop/src/components/: BuildPanel.tsx  ComposePanel.tsx  ContainerList.tsx  CreateContainerModal.css  CreateContainerModal.tsx  Dashboard.tsx  ImageList.tsx  NetworkList.tsx  Sidebar.tsx  VolumePanel.tsx
windows/service/: Cargo.toml
windows/service/src/: main.rs
wsl/furukawad/: Cargo.toml
wsl/furukawad/src/: main.rs  state.rs
wsl/furukawad/src/api/: build.rs  compose.rs  create.rs  delete.rs  images.rs  info.rs  inspect.rs  list.rs  logs.rs  middleware.rs  mod.rs  networks.rs  start.rs  stop.rs  version.rs  volumes.rs
wsl/furukawad/src/api/images/: create.rs  list.rs
