[workspace]
resolver = "2"
members = [
    "crates/furukawa_common",
    "crates/furukawa_domain",
    "crates/furukawa_infra_docker",
    "crates/furukawa_infra_fs",
    "crates/furukawa_infra_db",
    "crates/furukawa_infra_runtime",
    "crates/furukawa_infra_registry",
    "wsl/furukawad",
    "windows/service",
    "desktop/src-tauri",
]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "deny"
wildcard_imports = "deny"
module_name_repetitions = "allow" # Common in domain names like container::container_id

[profile.release]
strip = true
lto = true
codegen-units = 1
