[package]
name = "furukawa_build"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
anyhow = "1"
tokio = { version = "1", features = ["process", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
furukawa_domain = { path = "../../crates/furukawa_domain" }
furukawa_infra_fs = { path = "../../crates/furukawa_infra_fs" }
furukawa_infra_wsl = { path = "../../crates/furukawa_infra_wsl" }
flate2 = "1"
tar = "0.4"
