[package]
name = "furukawa_infra_docker"
version = "0.1.0"
edition = "2021"

[dependencies]
furukawa_domain = { path = "../furukawa_domain" }
furukawa_common = { path = "../furukawa_common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] } # For upgrading connections and raw streams
tokio = { version = "1.36", features = ["full"] }
thiserror = "1.0"
# For Unix socket support
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "server"] }
tower-service = "0.3"
