[package]
name = "furukawa_infra_fs"
version = "0.1.0"
edition = "2021"

[dependencies]
furukawa_domain = { path = "../furukawa_domain" }
furukawa_common = { path = "../furukawa_common" }
tokio = { version = "1.36", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tracing = "0.1"
thiserror = "1.0"
sha2 = "0.10"
walkdir = "2.4"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3.10"
