[package]
name = "furukawa_infra_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
furukawa_common = { path = "../furukawa_common" }
furukawa_domain = { path = "../furukawa_domain" }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
bytes = "1.0"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
