[package]
name = "furukawad"
version = "0.1.0"
edition = "2021"

[dependencies]
furukawa_common = { path = "../../crates/furukawa_common" }
furukawa_domain = { path = "../../crates/furukawa_domain" }
furukawa_infra_docker = { path = "../../crates/furukawa_infra_docker" }
furukawa_infra_fs = { path = "../../crates/furukawa_infra_fs" }
furukawa_infra_db = { path = "../../crates/furukawa_infra_db" }
furukawa_infra_runtime = { path = "../../crates/furukawa_infra_runtime" }
furukawa_infra_registry = { path = "../../crates/furukawa_infra_registry" }

tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["trace", "compression-full", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" # Only allowed in binary main
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
